--- a/Character/CSS/style.css
+++ b/Character/CSS/style.css
@@ -2,22 +2,30 @@ body{
     background: #d8c5ad;
 }
 
+.cat {
+    position: absolute;
+    top: 50%;
+    left: 55%;
+    transform: translate(-60%, -50%);
+}
+
 .face{
     width: 700px;
     height: 600px;
     background: #fff;
     border-radius: 60% 60% 55% 55%;
-    position: absolute;
-    top: 50%;
-    left: 55%;
-    transform: translate(-60%, -50%);
     border: 6px solid #000;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
 }
 
+.ear-left,
+.ear-right {
+    z-index: -1;
+}
+
 .ear-left {
     width: 250px;
-    height: 250px; 
+    height: 250px;
     background: #fff;
     border: 6px solid #000;
     border-radius: 15%;
@@ -26,19 +34,18 @@ body{
     transform: rotate(-10deg);
     right: 5%;
 }
-
+  
 .ear-right {
     width: 250px;
-    height: 250px; 
+    height: 250px;
     background: #fff;
     border: 6px solid #000;
     border-radius: 15%;
     position: absolute;
     bottom: 60%;
-    transform: rotate(10deg); 
+    transform: rotate(10deg);
     left: 5%;
 }
-
 
 
 .eye {
