--- a/Vending machine/css/style.css
+++ b/Vending machine/css/style.css
@@ -6,20 +6,31 @@ body {
 section {
     width: 360px;
     background: #fff;
-    position: absolute;
+    display: inline-flex;
+    gap: 38px;
 }
 
 .logo > img {
     width: 386px;
     height: 164px;
-    position: absolute;
-    left: 40%;
+    display: flex;
+    justify-content: center;
+    align-items: top;
 }
 
 .screen {
     height: 545px;
-    top: 30%;
-    left: 30%;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.menu {
+    width: 306px;
+    height: 272px;
+    display: inline-flex;
+    flex-wrap: wrap;
+    align-content: stretch;
 }
 
 .Cola {
@@ -44,12 +55,16 @@ button {
 
 .money {
     height: 50px;
-    top: 30%;
-    left: 50%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 
 .check {
     height: 507px;
-    top: 38%;
-    left: 50%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
