--- a/HTML_CSS/login/CSS/common.css
+++ b/HTML_CSS/login/CSS/common.css
@@ -1,136 +1,158 @@
-.heart {
-  font-size: 16px;
-  background: url(../img/heart.svg) no-repeat 0 center / 1.4em;
-  padding-left: 1.4em;
+/* 공통 */
+body {
+  margin: 0;
+  background: #fffaf0;
 }
-.diary-textarea {
-  /* 
-    인라인 요소 하단 여백 생김 해결 방법(img 동일)
-    1. vertical-align: top; 
-    2. display: block;
-  */
-  display: block;
-  width: 100%;
-  height: 360px;
-  resize: none;
-  padding: 16px;
-  box-sizing: border-box;
-  font-size: 16px;
-  font-family: inherit;
+button {
+  border: 0;
 }
-.diary-textarea::placeholder {
-  font-size: inherit;
+button:not(:disabled) {
+  cursor: pointer;
 }
 
-.diary-main textarea {
-  margin: 16px 0;
-}
-
-/* article */
-/* ul, li reset */
-ul,
-li {
-  list-style: none;
+.a11y-hidden {
+  clip: rect(1px, 1px, 1px, 1px);
+  clip-path: inset(50%);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
   padding: 0;
-  margin: 0;
-}
-p,
-h3 {
-  margin: 0;
-}
-
-.diary-article {
-  border-color: #677880;
-  border-style: solid;
-  border-width: 4px 1px 1px 1px;
-  padding: 64px 48px;
-  position: relative;
-}
-.diary-article::before,
-.diary-article::after {
-  content: "";
-  display: block;
-  width: 80px;
-  height: 40px;
-  background: royalblue;
   position: absolute;
 }
-.diary-article::before {
-  top: -20px;
-  left: 30px;
-  background: #fffaf0 url(../img/quote-start.svg) no-repeat 0 0 / contain;
+
+/* a-button  */
+/* .btn-join,
+.btn-login,
+.btn-logout */
+[class^="btn"] {
+  display: inline-block;
+  padding: 1em 1em 1em 2.8em;
+  text-decoration: none;
+  color: #5a6a72;
 }
-.diary-article::after {
-  bottom: -20px;
-  right: 30px;
-  background: #fffaf0 url(../img/quote-end.svg) no-repeat 0 0 / contain;
+.btn-join {
+  background: url(../img/icon-join.svg) no-repeat 0.8em center/ 2em;
+}
+.btn-login {
+  background: url(../img/icon-login.svg) no-repeat 0.8em center/ 2em;
+}
+.btn-logout {
+  background: url(../img/icon-logout.svg) no-repeat 0.8em center/ 2em;
 }
 
-.article-title {
-  color: #29363d;
-  font-size: 16px;
-  float: left;
-}
-
-.article-title::before {
-  content: "";
+/* button */
+.black-btn {
   display: block;
   width: 100%;
-  border-top: 1px solid #677880;
-  position: absolute;
-  top: 4px;
-  left: 0;
-  z-index: -1;
+  padding: 0;
+  background: #29363d;
+  color: white;
+  height: 48px;
+  border: 0;
+  font-weight: bold;
+  font-size: 16px;
+  border-radius: 4px;
+}
+/* .black-btn:not(:disabled) {
+  cursor: pointer;
+} */
+.black-btn:disabled {
+  opacity: 0.2;
 }
 
-.article-time {
-  color: #677880;
-  font-size: 12px;
-  float: right;
+/* form */
+.label-style,
+.input-style {
+  display: block;
+  width: 100%;
+  box-sizing: border-box;
 }
 
-.article-content {
-  color: #5a6a72;
+.input-style {
+  border: none;
+  box-shadow: 0 1px 0 0 #677880;
+  height: 48px;
+  transition: all 0.2s;
+  border-radius: 4px 4px 0 0;
+  padding: 0 16px;
+  font-size: 16px;
+}
+
+.input-style:hover {
+  box-shadow: 0 2px 0 0 #2e6ff2;
+}
+.input-style:focus {
+  outline: none;
+  box-shadow: 0 0 0 2px #2e6ff2;
+  border-radius: 4px;
+}
+
+.label-style {
   font-size: 14px;
-  line-height: 1.4;
-  clear: both;
-  margin-top: 40px;
+  color: #29363d;
+  margin-bottom: 8px;
 }
 
-/* layout */
-.container {
-  display: flex;
+/* layout ------------------------------- */
+/* header */
+header {
+  background-color: white;
+}
+.header-wrap {
   width: 1224px;
   max-width: calc(100% - 60px);
+  height: 120px;
   margin: auto;
-  gap: 40px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.logo {
+  height: 75px;
+}
+.hello {
+  display: inline-block;
+}
+.hello strong {
+  box-shadow: inset 0 -0.6em rgba(255, 79, 110, 0.5);
 }
 
-.container main {
-  flex-basis: 456px;
-  flex-shrink: 0;
-  border-right: 1px solid #ff4f6e;
-  padding-top: 56px;
-  padding-right: 40px;
-  min-height: calc(100vh - 120px);
-  box-sizing: border-box;
-}
-
-@media (max-width: 1024px) {
-  .container {
-    flex-direction: column;
-    gap: 0;
-  }
-  .container main {
-    border-right: 0;
-    padding-right: 0;
-    min-height: auto;
+@media (min-width: 541px) {
+  .hello::after {
+    content: "|";
+    color: #d8ddde;
+    margin-left: 24px;
   }
 }
 
-.container section {
-  padding-top: 94px;
+@media (max-width: 540px) {
+  .hello {
+    position: absolute;
+    top: 140px;
+    right: 34px;
+  }
 }
-.container section ul li {
-  margin-bottom: 76px;
+
+.svg {
+  display: block;
+  width: auto;
+  height: 120px;
+  margin: 0 auto 20px;
+}
+.svg .svg-heart {
+  transform: scale(1);
+  stroke: transparent;
+  stroke-width: 0px;
+  transform-origin: 50% 20px;
+  z-index: 10;
+  animation: heart 0.5s cubic-bezier(0.23, 1.08, 0.26, 0.01) infinite alternate;
+}
+
+@keyframes heart {
+  to {
+    stroke: #ffc7d1;
+    stroke-width: 2px;
+    transform: scale(3);
+  }
 }
