--- a/Sass/025_믹스인_contents.css
+++ b/Sass/025_믹스인_contents.css
@@ -17,4 +17,4 @@
   color: white;
   background-color: red;
   font-size: 32px;
-}/*# sourceMappingURL=025_alrtdls_contents.css.map */
+}/*# sourceMappingURL=025_믹스인_contents.css.map */
