--- a/HTML_CSS/Landing Page.html/css/style.css
+++ b/HTML_CSS/Landing Page.html/css/style.css
@@ -52,3 +52,24 @@ button {
     font-size: 16px;
     line-height: 20px;
 }
+
+.center {
+    position: absolute;
+    width: 660px;
+    height: 390px;
+    left: 320px;
+    top: 1060px;
+}
+
+.emphasis {
+    position: absolute;
+    width: 929px;
+    height: 60px;
+    left: 496px;
+    top: 1570px;
+    font-size: 48px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    color: #D97652;
+}
