--- a/Sass/Profile/img/css/style.css
+++ b/Sass/Profile/img/css/style.css
@@ -8,6 +8,7 @@ body {
 
 .a11y-hidden {
   clip: rect(1px, 1px, 1px, 1px);
+  -webkit-clip-path: inset(50%);
           clip-path: inset(50%);
   width: 1px;
   height: 1px;
