--- a/JavaScript/로컬스토리지 과제/css/style.css
+++ b/JavaScript/로컬스토리지 과제/css/style.css
@@ -7,6 +7,36 @@ p {
     margin: 0;
 }
 
+input {
+    background-color: rgb(74, 113, 243);
+    margin: 10px;
+    border: 0;
+    border-radius: 25px;
+    font-size: 20px;
+    color: #fff;
+}
+
+input::placeholder {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    color:#fff;
+}
+
+button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100px;
+    background-color: rgb(74, 113, 243);
+    margin: 10px;
+    border: 0;
+    border-radius: 25px;
+    font-size: 18px;
+    text-align: center;
+    color: #fff;
+}
+
 .card-item a {
     text-decoration: none;
     color: #29363d;
@@ -20,6 +50,7 @@ p {
 
 .card-item img {
     width: 100%;
+    height: 100%;
     aspect-ratio: 288/196;
     object-fit: cover;
     vertical-align: top;
