23. 05. 11. 수업내용 1만시간의 법칙 구현

--- a/React/10000hours/10000react/src/components/main/Main.css
+++ b/React/10000hours/10000react/src/components/main/Main.css
@@ -39,7 +39,7 @@ main .btn-exc::after {
     bottom: -20px;
     width: 60px;
     height: 70px;
-    background-image: url("../../images/hand.png");
+    background-image: url("../../img/hand.png");
 }
 
 main .cont-result .txt-wannabe {
