--- a/HTML_CSS/Landing Page/css/style.css
+++ b/HTML_CSS/Landing Page/css/style.css
@@ -9,6 +9,14 @@ body {
     height: 900px;
     left: 0px;
     top: 2px;
+}
+
+.heading {
+    position: absolute;
+    width: 1920px;
+    height: 902px;
+    left: 0px;
+    top: 78px;
     background: #F2E9D8;
 }
 
@@ -18,7 +26,32 @@ header {
     height: 102px;
     left: 0px;
     top: 0px;
-    background: #F2E9D8;
+}
+
+.main h2 {
+    position: absolute;
+    width: 737px;
+    height: 120px;
+    left: 320px;
+    top: 304px;
+
+    font-family: 'Spoqa Han Sans Neo';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 60px;
+    display: flex;
+    align-items: center;
+
+    color: #000000;
+}
+
+.main img {
+    position: absolute;
+    width: 415px;
+    height: 890px;
+    left: 0px;
+    top: 0px;
 }
 
 ul,
